# TimeThis

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CTestTestfile.cmake  GitVersion.yml  Makefile  README.md  TimeThis.sln  azure-pipelines.yml  cmake_install.cmake  index.md  nuget.config  testEnvironments.json
.github/workflows/: cmake.yml  codeql.yml
cmake/: timethisConfig.cmake.in
include/: CMakeLists.txt  Makefile  TimeThis.hpp  cmake_install.cmake
include/siddiqsoft/: timethis.hpp
nuget/: SiddiqSoft.TimeThis.nuspec
pack/: CMakeCommonHelpers.cmake  SiddiqSoft.TimeThis.nuspec  timethisConfig.cmake.in
src/: CMakeLists.txt  TimeThis.hpp
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  basic_tests.vcxproj  cmake_install.cmake  test.cpp
